Mejoras menores en la web de pruebas